namespace NearestNeighbour
{
    public interface IDamageable
    {
        void Damage();
    }
}
