using UnityEngine;

namespace NearestNeighbour
{
    public class Weapon : MonoBehaviour
    {
        
    }
}
